代码格式优化，readme内容新增